# sg-bank-pdf-parser

./: .gitignore  README.md  SKILL.md  pyproject.toml  pyrightconfig.json
references/: dbs-layouts.md  icbc-layouts.md  ir.schema.json  layouts.md  ocbc-layouts.md  uob-layouts.md
sg_bank_pdf_parser/: __init__.py  __main__.py  account_type.py  common.py  convert_statement.py  ir_builder.py  ir_schema.py  postprocess.py
sg_bank_pdf_parser/extractors/: __init__.py  base.py  dbs_extractor.py  icbc_extractor.py  ocbc_extractor.py  registry.py  uob_extractor.py
sg_bank_pdf_parser/parsers/: __init__.py  dbs_parser.py  icbc_parser.py  ocbc_parser.py  uob_parser.py
sg_bank_pdf_parser/renderers/: __init__.py  helpers.py  markdown.py
tests/: run_all.ps1  test_smoke.py
